force-app/main/default/objects/Content_Scoring_Weights__mdt/fields/CompletionRateWeight__c.field-meta.xml
<CustomField>
    <fullName>CompletionRateWeight__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Weight for completion rates (ACT courses/assets)</description>
    <label>Completion Rate Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>