force-app/main/default/objects/Content_Scoring_Weights__mdt/fields/EngagementWeight__c.field-meta.xml
<CustomField>
    <fullName>EngagementWeight__c</fullName>
    <defaultValue>75</defaultValue>
    <description>Weight for engagement scores (Consensus) or enrollment counts (ACT)</description>
    <label>Engagement Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>