force-app/main/default/objects/Content_Scoring_Weights__mdt/fields/PersonalizationWeight__c.field-meta.xml
<CustomField>
    <fullName>PersonalizationWeight__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Weight for personalization signals (OU match, role match, etc.)</description>
    <label>Personalization Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>