force-app/main/default/objects/Content_Scoring_Weights__mdt/fields/ProductTagMatchWeight__c.field-meta.xml
<CustomField>
    <fullName>ProductTagMatchWeight__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Weight for product tag exact matches (L2/L3)</description>
    <label>Product Tag Match Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>