force-app/main/default/objects/Content_Scoring_Weights__mdt/fields/RecencyWeight__c.field-meta.xml
<CustomField>
    <fullName>RecencyWeight__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Weight for content recency (newer content gets higher scores)</description>
    <label>Recency Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>