force-app/main/default/objects/Content_Scoring_Weights__mdt/fields/SemanticSimilarityWeight__c.field-meta.xml
<CustomField>
    <fullName>SemanticSimilarityWeight__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Weight for semantic similarity between query and content</description>
    <label>Semantic Similarity Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>